--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ header {
 .hero {
     width: 100%;
     height: 70vh;
-    background: url("img/ApurePortada.jpg") center no-repeat;
+    background: url("/img/ApurePortada.jpg") center no-repeat;
     background-size: cover;
     display: flex;
     align-items: center;
